fix white space issue with .range

--- a/application/stylus/atoms/input.styl
+++ b/application/stylus/atoms/input.styl
@@ -191,6 +191,7 @@ input[type=range]
       opacity: 0
       hasTransition()
       cursor: default
+      white-space: nowrap
       &:last-child
         {align}: auto
         {align-alt}: 0
